--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,5 @@ __pycache__
 .ipynb_checkpoints/
 
 references.md
-access_token.txt
-sticker_list.pdf
-test.png
+test/access_token.txt
+test/test.png
